# UniFFITemplate

./: .gitignore  Cargo.toml  LICENSE  Package.swift  README.md
Sources/UniFFITemplate/: UniFFITemplate.swift
Sources/UniFFITemplateCBindings/: UniFFITemplateCBindings.c
Sources/UniFFITemplateCBindings/include/: UniFFITemplateCBindings.h
Sources/UniFFITemplateRust/cargo/: Cargo.toml  build.rs
Sources/UniFFITemplateRust/cargo/src/: lib.rs  uniffi_template.udl
util/: build  generate.py  setup.py  utility.py
