[package]
name = "uniffi_template"
version = "0.1.0"
edition = "2021"

[lib]
name = "uniffi_template"
crate-type = ["staticlib", "cdylib"]

[dependencies]
uniffi = { version = "0.24.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.24.0", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi_bindgen.rs"
